# fibonacci_app

./: .dockerignore  .gitmodules  Dockerfile  db.sqlite3  docker-compose.yml  manage.py  pyvenv.cfg  requirements.txt  spectrum_list.txt
Scripts/: Activate.ps1  activate  activate.bat  django-admin.py
fibonacci/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
pages/: forms.py  views.py
pages/templates/: home.html  login.html  mydata.html  mydatasets.html  register.html  search_results.html
pipelines/: models.py  thread.py  urls.py  views.py
pipelines/Bindings/: Bindings.sln
pipelines/Bindings/Bindings/: Bindings.aps  Bindings.vcxproj  Bindings.vcxproj.filters  CMakeLists.txt  DeNovoSequencingAlgorithm.cpp  algorithms.cmake  main.cpp  resource.h
pipelines/Bindings/Bindings/DataStructures/: AminoAcids.cpp  AminoAcids.h  CMakeLists.txt  FragmentWeightMatrix.cpp  FragmentWeightMatrix.h  Peak.cpp  Peak.h  PeptideSequence.h  SpectrumGraph.cpp  SpectrumGraph.h
pipelines/Bindings/Bindings/Debug/: vc142.idb
pipelines/Bindings/Bindings/Debug/Bindings.tlog/: Bindings.lastbuildstate
pipelines/Bindings/Bindings/x64/Debug/: vc142.idb
pipelines/Bindings/Bindings/x64/Debug/Bindings.tlog/: Bindings.lastbuildstate
pipelines/DeNovo/: run_denovo.py
pipelines/migrations/: 0001_initial.py
pipelines/templates/pipelines/: pipeline_detail.html  pipeline_execute.html  pipeline_list.html
static/css/: styles.css
static/js/: pipeline-construction.js  script.js
templates/: base.html
